--- a/askama_escape/Cargo.toml
+++ b/askama_escape/Cargo.toml
@@ -15,6 +15,12 @@ appveyor = { repository = "djc/askama" }
 maintenance = { status = "actively-developed" }
 travis-ci = { repository = "djc/askama" }
 
+[dependencies]
+cfg-if ="0.1.6"
+
+[build-dependencies]
+version_check = "0.1.4"
+
 [dev-dependencies]
 criterion = "0.2"
 
